...

  @override
  Widget build(BuildContext context) {
    return Padding(
      padding: const EdgeInsets.only(top: 60),
      child: OutlinedButton(
        key:const Key('followFollowing_follow_following_button'),
        onPressed: () async {
          if (isFollowing) {
            final res = await showPopupMessage(
              context: context,
              title: Text(
                "Unfollow ${widget.profileData.displayName}",
...
            borderRadius: BorderRadius.circular(30),
          ),
          padding: const EdgeInsets.symmetric(horizontal: 15, vertical: 0),
        ),
        child: Text(
          isFollowing
              ? "Following"
              : isFollower
              ? "Follow Back"
              : "Follow",
          style: TextStyle(
            fontWeight: FontWeight.w900,
            fontSize: 16,
...
