...
  Future<void> checkEmail({required String email}) async {
    state = AuthState.loading();
    final bool? exists = await validateEmail(email);
    if (exists == true) {
      state = AuthState.success("Email found");
    } else if (exists == false) {
      state = AuthState.error("Email not found. Please create an account.");
    } else {
      state = AuthState.error("Failed to check email. Please try again.");
    }
  }

  //-------------------------------------------------Forget Password--------------------------------------------------------------------------------------//
...
