...
        child: Form(
          key: widget.formKey,
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              widget.controller.buildProfileInputField(
                fieldKey:const Key('nameProfile_edit_profile_form'),
                label: "Name",
                controller: _nameCtrl,
                hintText: "Name cannot be blank",
                keyboardType: TextInputType.name,
                onTap: () {},
                onChange: () {
...
