...
                      GoRouter.of(context).pop();
                    }
                  },
                ),
                actions: [
                  GestureDetector(
                    key:const Key ('saveProfile_edit_profile_screen'),
                    onTap: () {
                      //   TODO: save profile data
                      if (this.isNameFieldEmpty) {
                        //   don't do any thing
                      } else {
                        //   TODO: save profile data
...
