...
                          ScaffoldMessenger.of(context).showSnackBar(
                            SnackBar(content: Text('Could not open website')),
                          );
                        }
                      }
                      break;
                    case 'Save':
                      // Handle block
                      break;
                  }
                },
                itemBuilder: (context) => [
                  PopupMenuItem(
...
                    padding: const EdgeInsets.symmetric(
                      horizontal: 20,
                      vertical: 0,
                    ),
                  ),
                  child: Text(
                    'Edit',
                    style: TextStyle(fontSize: 14, fontWeight: FontWeight.w900),
                  ),
                ),
              if (!isMe) SizedBox(),
            ],
          ),
...
