...
          TextButton(
            onPressed: () {
              Navigator.pop(context);
              onConfirm?.call();
            },
            child: const Text(
              'Delete',
              style: TextStyle(color: Palette.textPrimary),
            ),
          ),
        ],
      ),
    );
...
